kubernetes/apps/self-hosted/nominatim/app/envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: nominatim_ui
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 404
                http_filters:
                  - name: envoy.filters.http.file_server
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.file_server.v3.FileServerConfig
                      path_mappings:
                        - request_path_prefix: "/"
                          file_path_prefix: "/ui-www/"
                      directory_behaviors:
                        - matchers:
                            - prefix: "/"
                          default_file: index.html
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
